@@ -311,6 +311,8 @@ double* check_gv(SEXP gr, SEXP hs, SEXP rho, int n, double *gv, double *hv)
     if (LENGTH(gval) != n)
 	error(_("gradient function must return a numeric vector of length %d"), n);
     Memcpy(gv, REAL(gval), n);
+    for (int i = 0; i < n; i++)
+	if(ISNAN(gv[i])) error("NA/NaN gradient evaluation");
     if (hv) {
 	SEXP hval = PROTECT(eval(hs, rho));
 	SEXP dim = getAttrib(hval, R_DimSymbol);
@@ -322,7 +324,11 @@ double* check_gv(SEXP gr, SEXP hs, SEXP rho, int n, double *gv, double *hv)
 	    error(_("Hessian function must return a square numeric matrix of order %d"),
 		  n);
 	for (i = 0, pos = 0; i < n; i++) /* copy lower triangle row-wise */
-	    for (j = 0; j <= i; j++) hv[pos++] = rhval[i + j * n];
+	    for (j = 0; j <= i; j++) {
+		hv[pos] = rhval[i + j * n];
+		if(ISNAN(hv[pos])) error("NA/NaN Hessian evaluation");
+		pos++;
+	    }
 	UNPROTECT(1);
     }
     UNPROTECT(1);
@@ -401,7 +407,10 @@ SEXP port_nlminb(SEXP fn, SEXP gr, SEXP hs, SEXP rho,
 	nlminb_iterate(b, REAL(d), fx, g, h, INTEGER(iv), LENGTH(iv),
 		       LENGTH(v), n, REAL(v), REAL(xpt));
 	if (INTEGER(iv)[0] == 2 && g) check_gv(gr, hs, rho, n, g, h);
-	else fx = asReal(eval(fn, rho));
+	else {
+	    fx = asReal(eval(fn, rho));
+	    if (ISNAN(fx)) error("NA/NaN function evaluation");
+	}
     } while(INTEGER(iv)[0] < 3);
 
     if (b) Free(b); if (g) Free(g); if (h) Free(h);
